<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_margin="20dp" android:id="@+id/tableLayout2">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/treeType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="24sp" android:layout_gravity="center"/>
            <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/editTree_Type_Text" android:textSize="18sp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/treeVariant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="24sp" android:layout_gravity="center"/>
            <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/editTree_Variant_Text"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/treePlanted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="24sp" android:layout_gravity="center"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editTree_Planted_Date" android:autofillHints="" android:textSize="18sp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/treeNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="24sp" android:layout_gravity="center"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editTree_Note_Text" android:textSize="14sp"
                    android:inputType="textMultiLine"/>
        </TableRow>
    </TableLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
            app:layout_constraintStart_toStartOf="@+id/tableLayout2">

        <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/editTree_Delete_Button"
                android:layout_span="2"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTree_Confirm_Button"/>
        <Button
                android:text="@string/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/editTree_Confirm_Button"
                android:layout_span="2"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
